Revert vertical splitting of desktop lyrics and properly fix huge word wrapping

--- a/style.css
+++ b/style.css
@@ -329,8 +329,6 @@ body, html {
                 filter 0.3s ease;
     white-space: pre-wrap;
     font-weight: bold;
-    max-width: 100%;
-    word-break: break-word;
 }
 
 .lyrics-syllable.passed {
